# learning_brain

./: README.md  pyproject.toml
learning_brain/: __init__.py  selsc_engine.py
